# Proyecto1_Redes_Cliente

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.stremlit/: config.toml
back-end/: client.py  main.py
front-end/: chatbot.py  main.py
